--- a/Codebase/Client/EGGS-Client/src/app/signin/signin.component.html
+++ b/Codebase/Client/EGGS-Client/src/app/signin/signin.component.html
@@ -34,4 +34,5 @@
             </form>
         </mat-card-content>
     </mat-card>
+    <span style="color:rgb(192, 65, 65);font-weight:600;font-size:small;margin-right:5.6em;"><br/><br/>{{error}}</span>
 </main>
