--- a/Codebase/Client/EGGS-Client/src/app/upload/upload.component.html
+++ b/Codebase/Client/EGGS-Client/src/app/upload/upload.component.html
@@ -14,33 +14,38 @@
 
         <!--Interaction-->
         <form>
+            <!-- Puppet Buttons -->
             <input type="file" #DirInput id="picker" class="dirInput" (click)="checkUserCredentials()" (change)="getFolder(DirInput)" webkitDirectory multiple/>
             <input type="button" id="encrypt" class="dirInput" (click)="upload()"/>
             <input type="button" id="download" class="dirInput" (click)="download()"/>
             <input type="button" id="clipboard" class="dirInput" [cdkCopyToClipboard]="copy()" (click)="showTooltip()"/>
             
-            <mat-form-field *ngIf="goToDecrypt" appearance="outline" hideRequiredMarker>
+            <!-- Deskramble Key Entry -->
+            <mat-form-field style="display:block;margin-bottom:20px;" *ngIf="goToDecrypt" appearance="standard" hideRequiredMarker>
                 <mat-label>Key</mat-label>
                 <input matInput [type]="hide ? 'password' : 'text'" [formControl]="keyFC" required/>
                 <button type="button" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide key'" [attr.aria-pressed]="hide">
                     <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                 </button>
-                <mat-error>A key is required to decrypt this folder</mat-error>
+                <mat-error>A key is required to deskramble this folder</mat-error>
             </mat-form-field>
-            <br/>
-
-            <button mat-raised-button [color]="btnColor" [title]="btnDescription">
-                <mat-icon aria-hidden="false" aria-label="icon">{{icon}}</mat-icon>
-                <label [for]="labelFor">{{labelTxt}}</label>
-            </button>
-
-            <span *ngIf="uploadProg > 0 && !downloaded">{{uploadProg}} of </span>
-            <span *ngIf="files.length > 0 && !downloaded">{{files.length}} files</span>
-            <br/>
-            <span *ngIf="copied" id="fade" class="tooltip">Copied to clipboard</span>
         </form>
 
-        <!--Results-->
+        <!-- Puppet Master Button -->
+        <button mat-raised-button [color]="btnColor" [title]="btnDescription">
+            <mat-icon aria-hidden="false" aria-label="icon">{{icon}}</mat-icon>
+            <label [for]="labelFor">{{labelTxt}}</label>
+        </button>
+
+        <!-- Button Messages -->
+        <span *ngIf="uploadProg > 0 && !downloaded">&ensp;{{uploadProg}} of</span>
+        <span *ngIf="files && files.length > 0 && !downloaded"> {{files.length}} files</span>
+        <br/>
+        <span *ngIf="fileEmpty" style="color:red;">An empty file was detected</span>
+        <span *ngIf="filetype" style="color:red;">File type not supported</span>
+        <span *ngIf="copied" id="fade" class="tooltip">Copied to clipboard</span>
+
+        <!-- File Upload Results -->
         <ul *ngIf="receivedFiles === true">
             <li *ngFor="let file of files">
                 <span>{{file.webkitRelativePath}}</span>
